style: fixing image stretch on safari

--- a/src/app/blog/blog-list/blog-card/blog-card.component.scss
+++ b/src/app/blog/blog-list/blog-card/blog-card.component.scss
@@ -10,6 +10,8 @@
     width: 100px;
     min-width: 30%;
     .blog__image {
+      display: flex;
+      align-self: flex-start;
       max-width: 100%;
       height: 100%;
       object-fit: cover;
